# wasm

./: .gitignore  README.md  bytecode.js  index.js  package-lock.json  package.json  wasm.rs
WebApplication1/: _ViewImports.cshtml
WebApplication1/Shared/: NavMenu.cshtml
WebApplication1/wwwroot/: index.html
crate/: Cargo.toml
crate/src/: lib.rs
