[package]
name = "rustlib"
version = "0.1.0"
authors = [ "Stian Sivertsen <sivertsenstian@gmail.com>" ]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.29"

[lib]
crate-type = [ "cdylib" ]

[dependencies.web-sys]
version = "0.3.6"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'console',
]